crates/products/wt/client/tests/snapshots/new_tui__completed_fields_open_review_and_b_returns_to_editing.snap
---
source: crates/products/wt/client/tests/new_tui.rs
expression: screen.contents()
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
         ┌Create development world────────────────────────────────────────────────────────┐         
         │ Review                                                                         │         
         │ World       repo-feature                                                       │         
         │ Context     local                                                              │         
         │ Kind        development                                                        │         
         │ Repository  git@example.test:repo.git                                          │         
         │ Base branch main                                                               │         
         │ Resources   2 CPU · 4096 MiB RAM · 32 GiB disk                                 │         
         │ Git author  Test User <test@example.test>                                      │         
         │ SSH keys    1                                                                  │         
         │             SHA256:jRmQ1wor7okK151ItqO9OwwQ327kx1MbcOyvhLGHDpY                 │         
         │                                                                                │         
         │                                                                                │         
         │                                                                                │         
         │                                                                                │         
         │                                                                                │         
         │                                                                                │         
         │                                                                                │         
         │                       Enter create · b edit · Esc cancel                       │         
         └────────────────────────────────────────────────────────────────────────────────┘
