crates/products/wt/client/tests/snapshots/new_tui__world_form_is_a_full_screen_terminal_ui.snap
---
source: crates/products/wt/client/tests/new_tui.rs
expression: contents
---





         ┌Create world────────────────────────────────────────────────────────────────────┐
         │   Context         ‹ local ›                                                    │
         │   World name      <suggested-name>                                              │
         │   Virtual CPUs    2 (default)                                                  │
         │   RAM (MiB)       4096 (default)                                               │
         │   Disk (GiB)      32 (default)                                                 │
         │   [ OK ]                                                                       │
         │                                                                                │
         │ Git author  Test User <test@example.test>                                      │
         │                                                                                │
         │                                                                                │
         │                                                                                │
         │                                                                                │
         │                                                                                │
         │                                                                                │
         │                                                                                │
         │                                                                                │
         │                                                                                │
         │ ↑/↓ or Tab/Shift-Tab focus · ←/→ select · Enter continue · Esc cancel          │
         └────────────────────────────────────────────────────────────────────────────────┘
